Fix searchbar overflowing the top of the screen if too much terms

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -82,8 +82,8 @@ natural-search {
     }
 }
 
-natural-search,
-.searchField {
+natural-search {
+    align-self: flex-start;
     font-size: 16px;
 }
 
